# praxess

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEMO.md  Dockerfile  README.md  SOURCE_OF_TRUTH.md  package-lock.json  package.json  railway.toml
app/api/analyze/: route.ts
app/api/observe/: route.ts
app/api/packet/: route.ts
backend/: __init__.py  actions.py  app.py  loader.py  log.py  mine.py  pyproject.toml  requirements.txt  state.py  trajectories.py  verify.py
backend/app/: __init__.py  analyze.py  claude_client.py  models.py  sources.py  verify.py
backend/fixtures/: belief_state_htn_lbp.json  belief_state_knee_oa.json  belief_state_primary_lbp.json
backend/policy/: lumbar_mri.json
cases/: README.md
cases/case-01-julius-renner-lbp/: demo-plan.md  encounter.json
cases/case-02-eva-casas-knee-oa/: demo-plan.md  encounter.json  payer-policy.json
cases/case-03-van-oreilly-hand-oa/: demo-plan.md  encounter.json  payer-policy.json
data/: demo-plan.md  payer-intel.json  payer-policy.json
docs/: DEMO_SCRIPT.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: praxess-ui.html
frontend/public/model/: payer-intel.json  world_model_priors.json
frontend/src/: App.css  App.jsx  CaseConstellation.jsx  CaseWorkspace.jsx  DecisionRollout.jsx  LoopApp.jsx  WorkspaceApp.jsx  api.js  appealPdf.js  index.css  loop.css  main.jsx  packetPdf.js  workspace.css
lib/: actions.ts  case.ts  claude.ts  data.ts  types.ts  verify.ts
ops/: CRON.md
scripts/: dev.sh  refit_from_flywheel.py  refresh_payer_intel.py  train_world_model.py
